# alzheimer-classification

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alzheimer_classification/: __init__.py  alzheimer_dataset.py  app.py  model_service.py  predict.py  train.py  ui.py
alzheimer_classification/models/: __init__.py  generic_model.py  model_utils.py  vgg16.py
alzheimer_classification/utils/: __init__.py  instantiators.py
backend/: Dockerfile  main.py  model_service.py
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: alzheimer.yaml
configs/experiment/: debug.yaml  example.yaml
configs/model/: vgg16.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
frontend/: Dockerfile  app.py
src/: alzheimer_dataset.py  predict.py  train.py
src/models/: cnn.py  generic_model.py  model_utils.py  simple_cnn.py  vgg16.py
src/utils/: definitions.py  enums.py
