[tool.poetry]
name = "alzheimer_classification"
version = "0.2.0"
description = "Detecting the stage of Alzheimer's based on MRI images."
authors = ["s24575 <sawickigrzegorz66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
torchvision = "^0.18.1"
pytorch-lightning = "^2.3.1"
torch = "^2.3.1"
numpy = "<2.0.0"
tensorboard = "^2.17.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.7.0"
kagglehub = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
