[tool.poetry]
name = "alzheimer_classification"
version = "0.2.0"
description = "Detecting the stage of Alzheimer's based on MRI images."
authors = ["Grzegorz Sawicki <sawickigrzegorz66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.18.1"
torch = "^2.3.1"
numpy = "<2.0.0"
tensorboard = "^2.17.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.7.0"
kagglehub = "^0.3.12"
mlflow = "^3.1.1"
hydra-core = "^1.3.2"
psutil = "^7.0.0"
python-multipart = "^0.0.20"
pytorch-lightning = "^2.5.2"
streamlit = "^1.46.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
