[tool.poetry]
name = "alzheimer_classification"
version = "0.2.0"
description = "Detecting the stage of Alzheimer's based on MRI images."
authors = ["Grzegorz Sawicki <sawickigrzegorz66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
numpy = "<2.0.0"
pytorch-lightning = "^2.5.2"
torch = "^2.3.1"
torchvision = "^0.18.1"
mlflow = "^3.1.1"
hydra-core = "^1.3.2"
kagglehub = "^0.3.12"

[tool.poetry.group.backend]
optional = true

[tool.poetry.group.backend.dependencies]
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
python-multipart = "^0.0.20"
pytorch-lightning = "^2.5.2"
torch = "^2.3.1"
torchvision = "^0.18.1"
mlflow = "^3.1.1"

[tool.poetry.group.frontend]
optional = true

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.35.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
